added database and guide to create new APIs
