# backend/docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "A production-ready Echo API starter template",
-        "title": "Echo API Starter",
+        "description": "API for managing rental properties in India",
+        "title": "Rental Property Management API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
@@ -55,7 +55,7 @@
         },
         "/users": {
             "get": {
-                "description": "Get a list of all users",
+                "description": "Get a paginated list of all users",
                 "consumes": [
                     "application/json"
                 ],
@@ -66,6 +66,22 @@
                     "users"
                 ],
                 "summary": "List all users",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 20,
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -131,6 +147,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
@@ -297,6 +319,12 @@
         "handler.ListUsersResponse": {
             "type": "object",
             "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
                 "total": {
                     "type": "integer"
                 },
@@ -378,6 +406,9 @@
         "response.ErrorResponse": {
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "string"
+                },
                 "details": {},
                 "error": {
                     "type": "string"
